consuming the external api